--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -24,6 +24,7 @@
         <h1><span class="highlight">Lingkungan</span> Aman</h1>
         <p>Akses platform simulasi serangan siber untuk keperluan pembelajaran dan pengujian model deteksi. 
         Fitur sederhana, aman, dan hanya digunakan untuk tujuan edukasi.</p>
+        <a href="#" class="btn">Mulai Simulasi</a>
     </div>
     <div class="hero-image">
         <img src="/public/images/hero-img.png" alt="Hacker typing">
