--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -20,8 +20,9 @@
 <section class="hero">
     <div class="hero-text">
         <h1><span class="highlight">Latih</span> Kemampuanmu</h1>
-        <h1><span class="highlight">Serangan</span> Siber di</h1> 
-        <h1><span class="highlight">Lingkungan</span> Aman</h1>
+        <h1><span class="highlight">Simulasi</span> Serangan</h1> 
+        <h1><span class="highlight">Siber</span> di Lingkungan</h1>
+        <h1><span class="highlight">Aman</span></h1>
         <p>Akses platform simulasi serangan siber untuk keperluan pembelajaran dan pengujian model deteksi. 
         Fitur sederhana, aman, dan hanya digunakan untuk tujuan edukasi.</p>
         <a href="#" class="btn">Mulai Simulasi</a>
